--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "gulp-uglify": "^1",
     "jshint-stylish": "^2",
     "laravel-elixir": "^5.0.0",
+    "gulp": "^3.8.8",
+    "bower": "^1.5.2",
     "laravel-elixir-livereload": "^1.1.6",
     "main-bower-files": "^2.1.0"
+  },
+  "scripts": {
+    "postinstall": "bower install && gulp --production"
   }
 }
