--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "moView Web App",
   "version": "1.0.0",
   "authors": [
-    "Nguyen Tran <kevtran07@gmail.com>"
+    "Nguyen Tran <kevtran07@gmail.com>",
+    "Minh Khoi <minhkhoi28@yahoomail.com>"
   ],
   "description": "moView Web Application",
   "main": "app.js",
@@ -20,6 +21,7 @@
     "angular-bootstrap": "2.0.0",
     "bootstrap-css-only": "~3.3.6",
     "angular-ui-router": "~0.2.18",
-    "angular-mocks": "~1.5.0"
+    "angular-mocks": "~1.5.0",
+    "angular-animate": "~1.5.7"
   }
 }
