--- a/bower.json
+++ b/bower.json
@@ -17,11 +17,11 @@
   "overrides": {},
   "dependencies": {
     "jquery": "1.9.1 - 2",
-    "angular": "~1.5.0",
+    "angular": "1.5.5",
     "angular-bootstrap": "2.0.0",
-    "bootstrap-css-only": "~3.3.6",
+    "bootstrap": "3.3.6",
     "angular-ui-router": "~0.2.18",
     "angular-mocks": "~1.5.0",
-    "angular-animate": "~1.5.7"
+    "angular-animate": "1.5.5"
   }
 }
