--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "bootstrap": "3.3.6",
     "angular-ui-router": "~0.2.18",
     "angular-mocks": "~1.5.0",
-    "angular-animate": "1.5.5"
+    "angular-animate": "1.5.5",
+    "moment": "~2.14.1"
   }
 }
