--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-concat-sourcemap": "^1.3.1",
     "gulp-filter": "^1.0.2",
+    "gulp-flatten": "^0.3.0",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.9.0",
     "gulp-minify-css": "^0.3.11",
