--- a/bower.json
+++ b/bower.json
@@ -28,5 +28,8 @@
     "angular-mocks": "~1.5.0",
     "angular-animate": "1.5.5",
     "moment": "~2.14.1"
+  },
+  "resolutions": {
+    "angular": "1.5.8"
   }
 }
